Новый тест на операцию(подтверждение)